[package]
name = "lo"
version = "0.0.1"
authors = ["jadon belezos <jjbelezos@gmail.com>"]
description="lo provides traits that makes composing functions together simpler in Rust"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/yuulive/lo"
categories = ["gui"]


